# cuSplunk

./: .gitignore  ARCHITECTURE.md  BETA.md  CHECKPOINT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  TECH_STACK.md  TESTING.md  WORKPLAN.md
.github/workflows/: ci.yml  release.yml
docs/: dev-setup.md
docs/decisions/: adr-001-storage-format.md  adr-002-spl-parser.md  adr-003-gpu-executor.md  adr-004-ingest-language.md  adr-005-store-language.md
docs/epics/: e1-ingest.md  e2-store.md  e3-query.md  e4-bridge.md  e5-detect.md  e6-platform.md  e7-enterprise.md  e8-scale.md
infra/docker/: docker-compose.dev.yml  docker-compose.gpu.yml  prometheus-dev.yml
infra/docker/mock-services/: mock_ingest.py  mock_store.py
infra/postgres/: init.sql
libs/proto/: store.proto
libs/proto/go/: go.mod
libs/proto/go/storepb/: store.pb.go  store_grpc.pb.go
libs/spl-parser/: CHECKPOINT.md  SPL.g4  pyproject.toml
libs/spl-parser/corpus/: basic.txt
libs/spl-parser/cusplunk/: __init__.py
libs/spl-parser/cusplunk/spl/: __init__.py  ast.py  parser.py  visitor.py
libs/spl-parser/tests/: test_corpus.py  test_edge_cases.py  test_hypothesis.py
scripts/: setup-dev.sh
services/bridge/: README.md
services/detect/: README.md  pyproject.toml  requirements-test.txt  requirements.txt
services/detect/cusplunk/: __init__.py  pipeline.py
services/detect/cusplunk/normalize/: __init__.py  cef.py  normalizer.py  syslog.py  windows.py
services/detect/cusplunk/sigma/: __init__.py  compiler.py  evaluator.py  loader.py  parser.py
services/detect/tests/: test_cybert_windows_event_log.py  test_normalize_cef.py  test_normalize_syslog.py  test_normalize_windows.py  test_sigma_compiler.py  test_sigma_evaluator.py  test_sigma_parser.py
services/ingest/: README.md  bench_test.go  doc.go  go.mod  go.sum  integration_test.go
services/ingest/cmd/ingest/: main.go
services/ingest/internal/config/: config.go
services/ingest/internal/event/: event.go
services/ingest/internal/gpuqueue/: gpuqueue.go  gpuqueue_test.go
services/ingest/internal/hec/: auth.go  handler.go  server.go  server_test.go
services/ingest/internal/metrics/: metrics.go
services/ingest/internal/queue/: queue.go
services/ingest/internal/s2s/: frame.go  frame_test.go  server.go  server_test.go
services/ingest/internal/store_client/: client.go
services/ingest/internal/syslog/: parser.go  parser_test.go  server.go  server_test.go
services/query/: README.md
services/query/cusplunk/ingest/: __init__.py  processor.py  store_grpc.py  test_processor.py
services/store/: CHECKPOINT.md  Cargo.toml  README.md  build.rs
services/store/src/: config.rs  error.rs  lib.rs  main.rs
services/store/src/bloom/: mod.rs
services/store/src/bucket/: meta.rs  mod.rs  reader.rs  writer.rs
services/store/src/catalog/: mod.rs
services/store/src/cold/: mod.rs
services/store/src/hot/: mod.rs
services/store/src/proto/: mod.rs
services/store/src/retention/: mod.rs
services/store/src/server/: mod.rs
services/store/src/warm/: mod.rs
tests/fixtures/: generate_fixtures.py
tests/fixtures/events/: firewall_sample.json  windows_event_log_1000.json
tests/fixtures/sigma/test_rules/: brute_force_ssh.yml  data_exfil_large_upload.yml  firewall_policy_bypass.yml  kerberos_ticket_request_unusual.yml  lateral_movement_pass_the_hash.yml  new_user_created.yml  port_scan_horizontal.yml  privilege_escalation_token.yml  rdp_scan.yml  windows_failed_logon.yml
tests/fixtures/spl/: golden_results.json
