[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cusplunk-detect"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "watchdog>=4.0",
    "grpcio>=1.64",
    "prometheus-client>=0.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires NVIDIA GPU + cuDF (skip with -m 'not gpu')",
    "integration: requires running services",
]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
